[tool.poetry]
name = "ober-vpn"
version = "0.1.0"
description = ""
authors = ["Nikita <nikita.efan.2017@gmail.com>"]
readme = "README.md"
packages = [{include = "ober_vpn"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.28.0"
aiogram = "^2.25.1"
paramiko = "^3.3.1"
wireguard-tools = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
